added html structure

--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
       href="./images/NovusTerraLogo.png"
       type="image/x-icon"
     />
-    <title>Document</title>
+    <title>Split Landing Page</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+      <div class="split left">
+        <h1>Playstation 5</h1>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+      <div class="split right">
+        <h1>XBox Series X</h1>
+        <a href="#" class="btn">Buy Now</a>
+      </div>
+    </div>
     <!-- Scripts -->
     <script src="./js/script.js"></script>
   </body>
